--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "gobetween-front-end",
   "version": "0.0.1",
 
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
+
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-loader": "^6.2.5",
@@ -20,6 +24,7 @@
   },
   "dependencies": {
     "jquery": "^3.1.0",
-    "reset.css": "^2.0.2"
+    "reset.css": "^2.0.2",
+    "particles.js": "2.0.0"
   }
 }
