--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "autoprefixer": "^6.4.0",
     "extract-text-webpack-plugin": "2.0.0-beta.3",
     "webpack-dev-server": "2.1.0-beta.0",
-    "webpack": "^2.1.0-beta.21"
+    "webpack": "2.1.0-beta.22 --save-dev"
   },
   "dependencies": {
     "jquery": "^3.1.0",
