--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "img-loader": "^1.3.1",
     "url-loader": "^0.5.7",
     "file-loader": "^0.9.0",
+    "markdown-loader": "0.1.7",
+    "html-loader": "0.4.4",
     "autoprefixer": "^6.4.0",
     "extract-text-webpack-plugin": "2.0.0-beta.3",
     "webpack-dev-server": "2.1.0-beta.0",
