--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/gobetween.wiki"]
 	path = src/gobetween.wiki
-	url = git@github.com:yyyar/gobetween.wiki.git
+	url = https://github.com/yyyar/gobetween.wiki.git
