--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.1",
 
   "scripts": {
-    "build": "webpack",
-    "build:prod": "NODE_ENV=production webpack",
-    "start": "webpack-dev-server",
-    "start:prod": "NODE_ENV=production webpack-dev-server"
+    "build": "NODE_ENV=production webpack",
+    "start": "webpack-dev-server"
   },
 
   "devDependencies": {
