--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "gobetween-front-end",
   "version": "0.0.1",
-
   "scripts": {
     "build": "NODE_ENV=production webpack",
     "start": "webpack-dev-server"
   },
-
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-loader": "^6.2.5",
@@ -29,7 +27,8 @@
     "markdown": "0.5.0"
   },
   "dependencies": {
+    "particles.js": "2.0.0",
     "reset.css": "^2.0.2",
-    "particles.js": "2.0.0"
+    "stylus": "^0.54.5"
   }
 }
