--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-cli": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
-    "style-loader": "^0.13.1",
     "css-loader": "^0.24.0",
-    "stylus-loader": "^2.3.1",
-    "postcss-loader": "^0.11.0",
-    "img-loader": "^1.3.1",
-    "url-loader": "^0.5.7",
-    "file-loader": "^0.9.0",
-    "markdown-loader": "0.1.7",
-    "html-loader": "0.4.4",
     "exports-loader": "0.6.3",
-    "autoprefixer": "^6.4.0",
     "extract-text-webpack-plugin": "2.0.0-beta.3",
-    "webpack-dev-server": "2.1.0-beta.0",
-    "webpack": "2.1.0-beta.22",
+    "file-loader": "^0.9.0",
+    "html-loader": "0.4.4",
+    "img-loader": "^1.3.1",
+    "markdown": "0.5.0",
+    "markdown-loader": "0.1.7",
+    "postcss-loader": "^0.11.0",
     "simple-ajax": "2.6.0",
-    "markdown": "0.5.0"
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^2.3.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.1.0-beta.22",
+    "webpack-dev-server": "2.1.0-beta.0"
   },
   "dependencies": {
     "particles.js": "2.0.0",
